# etaHEN

./: README.md  send_payload.ps1
PS5 technical writeups/: pkg-writeup.md
Source Code/: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json.tmp00ba4  ps5_cmake.sh  send_elf.py
Source Code/bootstrapper/: CMakeLists.txt  Makefile.tmpd13f6
Source Code/bootstrapper/Byepervisor/hen/: Makefile
Source Code/bootstrapper/Byepervisor/hen/include/: fpkg.h  hook.h  kdlsym.h  util.h
Source Code/bootstrapper/Byepervisor/hen/include/hooks/: 1_00.h  1_01.h  1_02.h  1_05.h  1_10.h  1_11.h  1_12.h  1_13.h  1_14.h  2_00.h  2_20.h  2_25.h  2_26.h  2_30.h  2_50.h
Source Code/bootstrapper/Byepervisor/hen/include/offsets/: 1_00.h  1_01.h  1_02.h  1_05.h  1_10.h  1_11.h  1_12.h  1_13.h  1_14.h  2_00.h  2_20.h  2_25.h  2_26.h  2_30.h  2_50.h
Source Code/bootstrapper/Byepervisor/hen/src/: fpkg.cpp  fself.cpp  hook.cpp  main.cpp  util.cpp
Source Code/bootstrapper/Byepervisor/include/: config.h  debug_log.h  hen.h  kdlsym.h  kexec.h  mirror.h  paging.h  patching.h  self.h  util.h
Source Code/bootstrapper/Byepervisor/include/offsets/: 1_00.h  1_01.h  1_02.h  1_05.h  1_10.h  1_11.h  1_12.h  1_13.h  1_14.h  2_00.h  2_20.h  2_25.h  2_26.h  2_30.h  2_50.h
Source Code/bootstrapper/Byepervisor/include/patches/: 1_00.h  1_01.h  1_02.h  1_05.h  1_10.h  1_11.h  1_12.h  1_13.h  1_14.h  2_00.h  2_20.h  2_25.h  2_26.h  2_30.h  2_50.h  patch_common.h
Source Code/bootstrapper/Byepervisor/src/: kdlsym.cpp  kexec.cpp  main.cpp  mirror.cpp  paging.cpp  patching.cpp  self.cpp  util.cpp
Source Code/bootstrapper/assets/: fps.prx  shell.prx
Source Code/bootstrapper/include/: elfldr.h  faulthandler.h  hbldr.h
Source Code/bootstrapper/source/: beta.cpp  daemon.c  elfldr.c  faulthandler.c  main.cpp
Source Code/daemon/: CMakeLists.txt
Source Code/daemon/assets/: strip_kstuff.sh
Source Code/daemon/include/: globalconf.hpp  ipc.hpp  launcher.hpp  log.h
Source Code/daemon/source/: commands.cpp  dumper_utils.cpp  embeddded_payloads.c  main.cpp  msg.cpp
Source Code/fps_elf/: CMakeLists.txt
Source Code/fps_elf/include/: Detour.h  defs.h  external_symbols.hpp  hde64.h  ipc.hpp  proc.h  webserver.hpp
Source Code/fps_elf/src/: Detour.cpp  external_symbols.cpp  hde64.cpp  proc.cpp  prx.cpp  ucred.cpp
Source Code/include/: freebsd-helper.h  global.h  libhttp2.h  msg.hpp  nid.hpp  util.hpp
Source Code/include/decryptor_inc/: sbl.h
Source Code/lib/: backtrace.cpp  bin2header.py  daemon.elf.h  devkit_kstuff.bin.h  elfldr.elf.h  kstuff.bin.h  kstuff_testkit.bin.h  libmprotect.h
Source Code/libNidResolver/: CMakeLists.txt
Source Code/libNineS/: CMakeLists.txt
Source Code/libNineS/include/: elfldr.h  freebsd-helper.h  hello_world.h  injector.h  log.h  nid.h  notify.h  pt.h  server.h  ucred.h
Source Code/libNineS/src/: elfldr.c  injector.c  main.c  notify.c  proc.c  pt.c  ucred.c
Source Code/libSelfDecryptor/: CMakeLists.txt
Source Code/libSelfDecryptor/include/: SelfDecryptor.h  sbl.h  selfpager.h
Source Code/libSelfDecryptor/source/: authmgr.c  main.c  selfpager.c
Source Code/libelfldr/: CMakeLists.txt
Source Code/libelfldr/include/: elfldr.h
Source Code/libelfldr/src/: elfldr.c
Source Code/shellui/: CMakeLists.txt
Source Code/shellui/assets/: encryptver.py  encryptxml.py  etaHEN_Lite.sxml  etaHEN_Lite.xml  etaHEN_toolbox.sxml  etaHEN_toolbox.xml
Source Code/shellui/include/: AccountActivator.h  HookedFuncs.hpp  RemotePlay.h  defs.h  external_symbols.hpp  ipc.hpp  monodef.h  ucred.h
Source Code/shellui/include/jit/: jit.h
Source Code/shellui/include/metadata/: appdomain.h  assembly.h  class.h  debug-helpers.h  debug-mono-symfile.h  environment.h  exception.h  image.h  loader.h  metadata.h  mono-config.h  mono-debug.h  object-forward.h  object.h  opcodes.h  profiler.h  reflection.h  sgen-bridge.h  threads.h  verify.h
Source Code/shellui/include/utils/: mono-counters.h  mono-dl-fallback.h  mono-error.h  mono-logger.h
Source Code/shellui/src/: AccountActivator.cpp  Detour.cpp  HookFunctions.cpp  MonoUtils.cpp  RemotePlay.cpp  embedded_resources.s  external_symbols.cpp  hde64.cpp  prx.cpp
Source Code/unpacker/: CMakeLists.txt
Source Code/unpacker/source/: elfldr.c  main.c
Source Code/util/: CMakeLists.txt
Source Code/util/include/: CheatManager.hpp  common_utils.h  error_translator.hpp  faulthandler.h  ipc.hpp  kernel.h  log.h  memory.h  pt.h  sfo.hpp  tcp.h
Source Code/util/include/mc4/: mc4decrypter.h
Source Code/util/source/: CheatManager.cpp  DirectPKGInstaller.cpp  Discord_RPC.c  common_utils.c  cpp_service.cpp  faulthandler.c  ftp.c  gameslist.cpp  http.c  john_ftp.c  klog.c  main.cpp  msg.cpp  tcp.c
Source Code/util/source/mc4decrypter/: aes.c  base64.c  mc4decrypter.c
